# QtMediaPlayer

./: CMakeLists.txt  README.md
src/player/: dataModel.cpp  dataModel.h  mainWindow.cpp  mainWindow.h  player.cpp  player.h  qtDependencies.h
